Add request service test coverage and fix jacoco checks